--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
         "@ant-design/colors": "^6.0.0",
         "@ant-design/icons": "^4.7.0",
         "@emotion/cache": "^11.10.3",
-        "@emotion/react": "^11.10.4",
-        "@emotion/styled": "^11.10.4",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@mui/lab": "^5.0.0-alpha.100",
-        "@mui/material": "^5.10.6",
+        "@mui/material": "^5.11.15",
+        "@mui/styled-engine-sc": "^5.11.11",
+        "@mui/x-data-grid": "^6.0.4",
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -39,6 +41,7 @@
         "redux": "^4.2.0",
         "simplebar": "^5.3.8",
         "simplebar-react": "^2.4.1",
+        "styled-components": "^5.3.9",
         "typescript": "4.8.3",
         "web-vitals": "^3.0.2",
         "yup": "^0.32.11"
