--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
         "@mui/material": "^5.11.15",
         "@mui/styled-engine-sc": "^5.11.11",
         "@mui/x-data-grid": "^6.0.4",
-        "@reduxjs/toolkit": "^1.8.5",
+        "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
         "apexcharts": "^3.35.5",
+        "axios": "^1.4.0",
         "formik": "^2.2.9",
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
@@ -32,7 +33,7 @@
         "react-element-to-jsx-string": "^15.0.0",
         "react-number-format": "^4.9.4",
         "react-perfect-scrollbar": "^1.5.8",
-        "react-redux": "^8.0.4",
+        "react-redux": "^8.0.5",
         "react-router": "^6.4.1",
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
