--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "@ant-design/colors": "^6.0.0",
         "@ant-design/icons": "^4.7.0",
         "@emotion/cache": "^11.10.3",
-        "@emotion/react": "^11.10.6",
-        "@emotion/styled": "^11.10.6",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
         "@mui/lab": "^5.0.0-alpha.100",
-        "@mui/material": "^5.11.15",
+        "@mui/material": "^5.13.4",
         "@mui/styled-engine-sc": "^5.11.11",
         "@mui/x-data-grid": "^6.0.4",
         "@reduxjs/toolkit": "^1.9.5",
